--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,15 @@
   <style>
     body {
       margin: 0px;
+      background-color: black;
     }
   </style>
 </head>
 <body>
-<script src="client.js"></script>
+<script src="components/threejs/build/three.js"></script>
+<script src="api/client"></script>
+<script src="client/Universe.js"></script>
+<script src="client/Gravitator.js"></script>
+<script src="client/main.js"></script>
 </body>
 </html>
