--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,13 @@
 <body>
 <script src="components/threejs/build/three.js"></script>
 <script src="api/client"></script>
-<script src="client/Universe.js"></script>
+<script src="client/gravitator/Existence.js"></script>
+<script src="client/gravitator/Gravitation.js"></script>
+<script src="client/gravitator/Acceleration.js"></script>
+<script src="client/gravitator/Motion.js"></script>
+<script src="client/gravitator/History.js"></script>
+<script src="client/gravitator/Future.js"></script>
+<script src="client/gravitator/Universe.js"></script>
 <script src="client/Gravitator.js"></script>
 <script src="client/main.js"></script>
 </body>
